k8s/grafana-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-line-grafana-dashboard
  namespace: grafana-dashboard
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: main-line-grafana-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: service
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: main-line-grafana-dashboard
