k8s/grafana-dashboard/httproute-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-dashboard-direct
  namespace: grafana-dashboard
spec:
  parentRefs:
    - name: main-line-gateway
      namespace: default
      sectionName: grafana-direct
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-line-grafana-dashboard
          port: 80
